fix api manage category